mType/tests/testFiles/interface/error/invalidInterfaceName.mt
// Invalid interface name test (should start with capital letter)
interface drawable {
    function draw(): void;
}

print("This should not print");